jenkins/jenkins-agent.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins-agent
  namespace: kube-ops
  labels:
    app: jenkins-agent
spec:
  selector:
    matchLabels:
      app: jenkins-agent
  template:
    metadata:
      labels:
        app: jenkins-agent
    spec:
      containers:
      - name: agent
        image: dockerproxy.com/jenkins/inbound-agent:latest
        imagePullPolicy: IfNotPresent
        securityContext:
          privileged: true
